Did some clean up
Added @Override, replaced
Collections.unmodifiableList(Arrays.asList(...)) by List.of(...),
corrected documentation of Demux, deleted unused main(String[]) in
Simulation, made some variables package private (timeline and wires do
have their own packages anyway) to prevent synthetic accessors and other
small simplifications